# flask-shoppingcart

./: .gitignore  LICENCE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  readme.md  requirements-dev  run.py  setup.py
.github/workflows/: python-package.yml  test-package.yml
examples/basic_usage/: as_api.py  cart_api.py
flask_shoppigcart/: __init__.py  flask_shoppingcart.py
src/flask_shoppingcart/: __init__.py  _shoppingcart.py  config.py  exceptions.py  flask_shoppingcart.py  manage_cart_item_extra_data.py  models.py  shoppingcart.py
tests/: conftest.py  test_flask_shoppingcart.py  test_flask_shoppingcart_base.py
